KompilatorPodstawowy/parser.output
Terminals unused in grammar

    LABEL
    PROC
    NONE
    READ


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID '(' identifier_list ')' ';' declarations compound_statement '.'

    2 identifier_list: ID
    3                | identifier_list ',' ID

    4 declarations: declarations VAR identifier_list ':' type ';'
    5             | ε

    6 type: INT

    7 compound_statement: BEG statement_list END

    8 statement_list: statement
    9               | statement_list ';' statement

   10 statement: variable ASSIGN expression
   11          | WRITE '(' variable ')'

   12 variable: ID

   13 expression: simple_expression

   14 simple_expression: term
   15                  | simple_expression ADDOP term

   16 term: factor
   17     | term MULOP factor

   18 factor: variable
   19       | NUM
   20       | '(' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 1 11 20
    ')' (41) 1 11 20
    ',' (44) 3
    '.' (46) 1
    ':' (58) 4
    ';' (59) 1 4 9
    error (256)
    PROGRAM (258) 1
    ID (259) 1 2 3 12
    INT (260) 6
    VAR (261) 4
    NUM (262) 19
    LABEL (263)
    PROC (264)
    NONE (265)
    BEG (266) 7
    END (267) 7
    ASSIGN (268) 10
    ADDOP (269) 15
    MULOP (270) 17
    WRITE (271) 11
    READ (272)


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program (25)
        on left: 1
        on right: 0
    identifier_list (26)
        on left: 2 3
        on right: 1 3 4
    declarations (27)
        on left: 4 5
        on right: 1 4
    type (28)
        on left: 6
        on right: 4
    compound_statement (29)
        on left: 7
        on right: 1
    statement_list (30)
        on left: 8 9
        on right: 7 9
    statement (31)
        on left: 10 11
        on right: 8 9
    variable (32)
        on left: 12
        on right: 10 11 18
    expression (33)
        on left: 13
        on right: 10 20
    simple_expression (34)
        on left: 14 15
        on right: 13 15
    term (35)
        on left: 16 17
        on right: 14 15 17
    factor (36)
        on left: 18 19 20
        on right: 16 17


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM • ID '(' identifier_list ')' ';' declarations compound_statement '.'

    ID  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM ID • '(' identifier_list ')' ';' declarations compound_statement '.'

    '('  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: PROGRAM ID '(' • identifier_list ')' ';' declarations compound_statement '.'

    ID  shift, and go to state 6

    identifier_list  go to state 7


State 6

    2 identifier_list: ID •

    $default  reduce using rule 2 (identifier_list)


State 7

    1 program: PROGRAM ID '(' identifier_list • ')' ';' declarations compound_statement '.'
    3 identifier_list: identifier_list • ',' ID

    ')'  shift, and go to state 8
    ','  shift, and go to state 9


State 8

    1 program: PROGRAM ID '(' identifier_list ')' • ';' declarations compound_statement '.'

    ';'  shift, and go to state 10


State 9

    3 identifier_list: identifier_list ',' • ID

    ID  shift, and go to state 11


State 10

    1 program: PROGRAM ID '(' identifier_list ')' ';' • declarations compound_statement '.'

    $default  reduce using rule 5 (declarations)

    declarations  go to state 12


State 11

    3 identifier_list: identifier_list ',' ID •

    $default  reduce using rule 3 (identifier_list)


State 12

    1 program: PROGRAM ID '(' identifier_list ')' ';' declarations • compound_statement '.'
    4 declarations: declarations • VAR identifier_list ':' type ';'

    VAR  shift, and go to state 13
    BEG  shift, and go to state 14

    compound_statement  go to state 15


State 13

    4 declarations: declarations VAR • identifier_list ':' type ';'

    ID  shift, and go to state 6

    identifier_list  go to state 16


State 14

    7 compound_statement: BEG • statement_list END

    ID     shift, and go to state 17
    WRITE  shift, and go to state 18

    statement_list  go to state 19
    statement       go to state 20
    variable        go to state 21


State 15

    1 program: PROGRAM ID '(' identifier_list ')' ';' declarations compound_statement • '.'

    '.'  shift, and go to state 22


State 16

    3 identifier_list: identifier_list • ',' ID
    4 declarations: declarations VAR identifier_list • ':' type ';'

    ','  shift, and go to state 9
    ':'  shift, and go to state 23


State 17

   12 variable: ID •

    $default  reduce using rule 12 (variable)


State 18

   11 statement: WRITE • '(' variable ')'

    '('  shift, and go to state 24


State 19

    7 compound_statement: BEG statement_list • END
    9 statement_list: statement_list • ';' statement

    END  shift, and go to state 25
    ';'  shift, and go to state 26


State 20

    8 statement_list: statement •

    $default  reduce using rule 8 (statement_list)


State 21

   10 statement: variable • ASSIGN expression

    ASSIGN  shift, and go to state 27


State 22

    1 program: PROGRAM ID '(' identifier_list ')' ';' declarations compound_statement '.' •

    $default  reduce using rule 1 (program)


State 23

    4 declarations: declarations VAR identifier_list ':' • type ';'

    INT  shift, and go to state 28

    type  go to state 29


State 24

   11 statement: WRITE '(' • variable ')'

    ID  shift, and go to state 17

    variable  go to state 30


State 25

    7 compound_statement: BEG statement_list END •

    $default  reduce using rule 7 (compound_statement)


State 26

    9 statement_list: statement_list ';' • statement

    ID     shift, and go to state 17
    WRITE  shift, and go to state 18

    statement  go to state 31
    variable   go to state 21


State 27

   10 statement: variable ASSIGN • expression

    ID   shift, and go to state 17
    NUM  shift, and go to state 32
    '('  shift, and go to state 33

    variable           go to state 34
    expression         go to state 35
    simple_expression  go to state 36
    term               go to state 37
    factor             go to state 38


State 28

    6 type: INT •

    $default  reduce using rule 6 (type)


State 29

    4 declarations: declarations VAR identifier_list ':' type • ';'

    ';'  shift, and go to state 39


State 30

   11 statement: WRITE '(' variable • ')'

    ')'  shift, and go to state 40


State 31

    9 statement_list: statement_list ';' statement •

    $default  reduce using rule 9 (statement_list)


State 32

   19 factor: NUM •

    $default  reduce using rule 19 (factor)


State 33

   20 factor: '(' • expression ')'

    ID   shift, and go to state 17
    NUM  shift, and go to state 32
    '('  shift, and go to state 33

    variable           go to state 34
    expression         go to state 41
    simple_expression  go to state 36
    term               go to state 37
    factor             go to state 38


State 34

   18 factor: variable •

    $default  reduce using rule 18 (factor)


State 35

   10 statement: variable ASSIGN expression •

    $default  reduce using rule 10 (statement)


State 36

   13 expression: simple_expression •
   15 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 42

    $default  reduce using rule 13 (expression)


State 37

   14 simple_expression: term •
   17 term: term • MULOP factor

    MULOP  shift, and go to state 43

    $default  reduce using rule 14 (simple_expression)


State 38

   16 term: factor •

    $default  reduce using rule 16 (term)


State 39

    4 declarations: declarations VAR identifier_list ':' type ';' •

    $default  reduce using rule 4 (declarations)


State 40

   11 statement: WRITE '(' variable ')' •

    $default  reduce using rule 11 (statement)


State 41

   20 factor: '(' expression • ')'

    ')'  shift, and go to state 44


State 42

   15 simple_expression: simple_expression ADDOP • term

    ID   shift, and go to state 17
    NUM  shift, and go to state 32
    '('  shift, and go to state 33

    variable  go to state 34
    term      go to state 45
    factor    go to state 38


State 43

   17 term: term MULOP • factor

    ID   shift, and go to state 17
    NUM  shift, and go to state 32
    '('  shift, and go to state 33

    variable  go to state 34
    factor    go to state 46


State 44

   20 factor: '(' expression ')' •

    $default  reduce using rule 20 (factor)


State 45

   15 simple_expression: simple_expression ADDOP term •
   17 term: term • MULOP factor

    MULOP  shift, and go to state 43

    $default  reduce using rule 15 (simple_expression)


State 46

   17 term: term MULOP factor •

    $default  reduce using rule 17 (term)
